...
    <string name="splash_footer_text">Please do not trust us.\nIt is not necessary</string>

    <string name="Contacts">Contacts</string>
    <string name="item_image">Item image</string>
    <string name="contact_name">Contact name</string>
...
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_message">Do you want to delete %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aborted">Aborted</string>
...
    <string name="skip">Skip</string>
    <string name="create_identity_successful">Identity created</string>
    <string name="dialog_headline_info">Information</string>
    <string name="create_identity_enter_all_data">Please fill in all fields</string>
    <string name="finish">Finish</string>
...
    <string name="filebrowser">Files</string>
    <string name="settings_headline_boxaccount">Qabel account</string>
    <string name="headline_settings">Settings</string>
    <string name="settings_change_account_password">Change password</string>
    <string name="settings_change_account_password_summary">Change the password of the Qabel account</string>
...
    <string name="add_new_contact">Add new contact</string>
    <string name="qrecode_scanner">QR-Code scanner</string>
    <string name="from_file">Import</string>
    <string name="direct_input">Manual input</string>

    <string name="contact_import_failed">Contact import failed</string>
    <string name="contact_import_manual_failed">Contact import failed. Please check if you entered the correct data</string>

    <string name="contact_import_successfull">Contact imported</string>
    <string name="contact_import_successfull_many">%1$d / %2$d Contacts imported</string>
    <string name="contact_import_zero_additions">No new Contacts found</string>
    <string name="contact_exists">Contact already in contact list</string>
...


    <string name="help_main_headline_tou">Terms of use</string>
    <string name="help_main_headline_data_policy">Data policy</string>
    <string name="help_main_headline_about_us">Imprint</string>
    <string name="help_main_headline_app_infos">App infos</string>
    <string name="help_main_headline_app_version">App Version</string>
...
    <string name="help_key_main_app_about_us" translatable="false">key_about_us</string>
    <string name="app_info_version_and_build">You use app version $1 from $2</string>
    <string name="headline_main_help">Legal Stuff</string>
    <string name="message_welcome_screen1">\nQabel is a free,\npublished-source\ncryptography platform.\n\nBecome a part\nof the Qabel ecosystem.\n\nEnjoy!</string>
    <string name="message_welcome_screen2">End-to-end encrypted uploads,\ndownloads and data storage.\nMetadata obfuscation.\n2GB free storage.\nSynchronisation over any\nnumber of devices\nSharing with other Qabel users.\nManagement of multiple\nidentities with only one Qabel\naccount within\none application.\nIntegrated short message\nservice.</string>
...
    <string name="github_url" translatable="false">https://github.com/Qabel</string>
    <string name="asset_qabel_font" translatable="false">fonts/Art Post.ttf</string>
    <string name="help">Legal Stuff</string>
    <string name="contact_export_all">Export all contacts</string>
    <string name="cant_export_contacts">Can\'t export contacts</string>
...
    <string name="action_tellafriend">Invitation</string>

    <string name="cant_import_file_type_is_unknown">Can\'t import file. The file type is unknown</string>
    <string name="idenity_imported">Identity successfully imported</string>
    <string name="shared_with_you">shared with you</string>
    <string name="no_connection">No Connection</string>
    <string name="close_app">Close App</string>
    <string name="retry_action">Retry</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="new_messages">%d new messages</string>
...
