...
        android:layout_height="96dp"
        android:layout_marginTop="19dp"
        android:src="@drawable/qrcode"/>


    <LinearLayout
        android:id="@+id/select_identity_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_toRightOf="@id/qabelLogo"
        android:clickable="true"
...
